# ksqldb-client

./: Dockerfile  compose.yml  pyproject.toml
ksqldb_client/: __init__.py
notebooks/: ksqldb_rest_api_lab.ipynb
tests/: test_ksqldb_client.py
tests/testing/: test_parse.py
